--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,23 @@ html {
  }  
  nav, footer {  
   padding: 4px 20px;  
- }  
+ } 
+  /* ---- Switch ----  */
+.switch {
+    /* align-self: inherit; */
+    margin: 0.9375rem;
+}
+.inner-switch {
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid #555;
+    border-radius: 1.25rem;
+    width: 3.125rem;
+    text-align: center;
+    font-size: 1rem;
+    padding: 0.1875rem;
+    margin-left: 0.3125rem;
+}
  /* ------- Top Nav ------- */  
  nav span {  
   list-style: none;  
@@ -175,3 +191,9 @@ html {
  footer a:hover {  
   text-decoration-line: underline;  
  }  
+ .dark,
+.dark * {
+    background-color: #222;
+    color: #e6e6e6;
+    border-color: #e6e6e6;
+}
