--- a/dark-theme.css
+++ b/dark-theme.css
@@ -4,7 +4,8 @@ html {
    }  
    body {  
     font: 13px arial;  
-    background-color: #000; 
+    background-color: #202124;
+    transition: background-color .5s;
    }  
    /* ------- Nav Items ------- */  
    ul {  
@@ -54,6 +55,16 @@ html {
    .apps:hover {  
     opacity: 1;  
    }  
+   #theme-toggle{ 
+    outline: none;  
+    background: #f2f2f2;
+    border: 0.1px solid #e4e2e2;
+    color: #171717;  
+    display: inline-block;  
+    line-height: 28px;  
+    padding: 0 12px;  
+    border-radius: 2px; 
+   }
    /* ------- Sign In Button ------- */  
    .sign_in {  
     border: 1px solid #4285f4;  
@@ -69,6 +80,7 @@ html {
     color: #fff;  
     opacity: 1;  
     text-decoration: none;  
+    
    }  
    .sign_in a:hover {  
     opacity: 1;  
@@ -76,7 +88,8 @@ html {
    }  
    .sign_in:hover {  
     opacity: 1;  
-    box-shadow: 0 1.5px 0 0 #e4e4e4;  
+    outline: none;
+    border: 0.01px solid #f2f2f2
    }  
    /* ------- Center Conte ------- */  
    .cntr_pg {  
@@ -98,23 +111,23 @@ html {
     margin: auto;  
    }  
    .search_bar {  
-        border-radius: 40px;  
+    border-radius: 40px;  
     width: 585px;  
     margin: auto;  
     height: 39px;  
-    border: .7px solid #E4E4E4;  
-    background-color: #fff;  
-    box-shadow:0px 1px 4px #E4E4E4;  
+    border: .05px solid #c9c8c8;  
+    background-color: #303134;  
     margin-bottom: 20px;  
-    outline: none;  
+    color: #f2f2f2;
     text-indent: 15px;  
    }  
    .search_bar:hover, .search_bar:active {  
     padding-bottom: 2px;  
     padding-top: 1px;  
-    margin-top: -1px;  
+    margin-top: -1px; 
+    border: none; 
     width: 585px;  
-    box-shadow:0px 3px 8px #E4E4E4;  
+    box-shadow:0px 2px 5px #1b1b1b;  
     outline: none;  
    }  
    .mic {  
@@ -129,10 +142,11 @@ html {
     height: 36px;  
         cursor: pointer;  
     line-height: 27px;  
-    background-color: #f2f2f2;  
-    border: 1px solid #f2f2f2;  
-    border-radius: 2px;  
-    color: #757575;  
+    outline:none;
+    border:none;
+    background-color: #303134;    
+    border-radius: 4px;  
+    color: #f2f2f2;  
     cursor: default;  
     font-family: arial,sans-serif;  
     font-size: 13px;  
@@ -149,10 +163,26 @@ html {
         cursor: pointer;  
    }  
    .submit_buttons:hover {  
-    border: .7px solid #d0d0d0;  
-    color: #000;  
-    box-shadow:0px 1px 4px #E4E4E4;  
+    border: .07px solid #d0d0d0;  
+    outline:none;
+    color: #f2f2f2;  
    }  
+   .Bottomdiv{
+    display:inherit;
+    font-size: 12px;
+    margin-top: 3%;
+  }
+  .Bottomdiv span{
+    width:7%;
+    color: #f2f2f2;
+  }
+  .Bottomdiv a{
+    color:#4285f4;
+}
+.Bottomdiv ul{
+    display: inline-flex;
+    justify-content: space-around;
+}
    /* ------- Footer ------- */  
    .l_ftr {  
     float: left;  
@@ -166,13 +196,13 @@ html {
     left: 0;  
     right: 0;  
     bottom: 0;  
-    color: #666666;  
-    background-color: #0000;  
-    border-top: solid 1px #e4e4e4;  
+    color: #f2f2f2;  
+    background-color: #171717;  
+    border-top: 1px solid #6e6e6e;  
    }  
    footer a {  
     text-decoration: none;  
-    color: #fff;  
+    color: #f2f2f2;  
     opacity: 0.75;  
    }  
    footer a:hover {  
